syntax = "proto3";

package api;

import "get_beers.proto";
import "get_beer.proto";
import "create_beer.proto";
import "update_beer.proto";
import "delete_beer.proto";
import "set_favorite.proto";
import "get_favorites.proto";
import "delete_favorite.proto";

option go_package = ".";

service Catalog {
    rpc GetBeers(GetBeersRequest) returns (GetBeersResponse) {}
    rpc GetBeer(GetBeerRequest) returns (GetBeerResponse) {}
    rpc CreateBeer(CreateBeerRequest) returns (CreateBeerResponse) {}
    rpc UpdateBeer(UpdateBeerRequest) returns (UpdateBeerResponse) {}
    rpc DeleteBeer(DeleteBeerRequest) returns (DeleteBeerResponse) {}

    rpc SetFavorite(SetFavoriteRequest) returns (SetFavoriteResponse) {}
    rpc GetFavorites(GetFavoritesRequest) returns (GetFavoritesResponse) {}
    rpc DeleteFavorite(DeleteFavoriteRequest) returns (DeleteFavoriteResponse) {}
}
