syntax = "proto3";

package api;

import "beer.proto";

option go_package = ".";

message CreateBeerRequest {
  Beer beer = 1;
}

message CreateBeerResponse {
  int64 beerId = 1;
}