syntax = "proto3";

package api;

import "beer.proto";

option go_package = ".";

message GetBeersRequest {
  optional int32 limit = 1;
  optional string name = 2;
  optional string brand = 3;
  optional Type type = 4;
  optional int32 deg = 5;
  optional bool sweet = 6;
}

message GetBeersResponse {
  repeated Beer beers = 1;
}