syntax = "proto3";

package api;

import "catalog/beer.proto";

option go_package = ".";

message UpdateBeerRequest {
  int64 beerId = 1;
  Beer beer = 2;
}

message UpdateBeerResponse {
  Beer beer = 1;
}